include/El/blas_like/level1.h

/* Vertical concatenation
   ---------------------- */
/* C := [A; B] */

EL_EXPORT ElError ElVCat_i
( ElConstMatrix_i A, ElConstMatrix_i B, ElMatrix_i C );
EL_EXPORT ElError ElVCat_s
( ElConstMatrix_s A, ElConstMatrix_s B, ElMatrix_s C );
EL_EXPORT ElError ElVCat_d
( ElConstMatrix_d A, ElConstMatrix_d B, ElMatrix_d C );
EL_EXPORT ElError ElVCat_c
( ElConstMatrix_c A, ElConstMatrix_c B, ElMatrix_c C );
EL_EXPORT ElError ElVCat_z
( ElConstMatrix_z A, ElConstMatrix_z B, ElMatrix_z C );
EL_EXPORT ElError ElVCatDist_i
( ElConstDistMatrix_i A, ElConstDistMatrix_i B, ElDistMatrix_i C );
EL_EXPORT ElError ElVCatDist_s
( ElConstDistMatrix_s A, ElConstDistMatrix_s B, ElDistMatrix_s C );
EL_EXPORT ElError ElVCatDist_d
( ElConstDistMatrix_d A, ElConstDistMatrix_d B, ElDistMatrix_d C );
EL_EXPORT ElError ElVCatDist_c
( ElConstDistMatrix_c A, ElConstDistMatrix_c B, ElDistMatrix_c C );
EL_EXPORT ElError ElVCatDist_z
( ElConstDistMatrix_z A, ElConstDistMatrix_z B, ElDistMatrix_z C );
EL_EXPORT ElError ElVCatSparse_i
( ElConstSparseMatrix_i A, ElConstSparseMatrix_i B, ElSparseMatrix_i C );
EL_EXPORT ElError ElVCatSparse_s
( ElConstSparseMatrix_s A, ElConstSparseMatrix_s B, ElSparseMatrix_s C );
EL_EXPORT ElError ElVCatSparse_d
( ElConstSparseMatrix_d A, ElConstSparseMatrix_d B, ElSparseMatrix_d C );
EL_EXPORT ElError ElVCatSparse_c
( ElConstSparseMatrix_c A, ElConstSparseMatrix_c B, ElSparseMatrix_c C );
EL_EXPORT ElError ElVCatSparse_z
( ElConstSparseMatrix_z A, ElConstSparseMatrix_z B, ElSparseMatrix_z C );
EL_EXPORT ElError ElVCatDistSparse_i
( ElConstDistSparseMatrix_i A, ElConstDistSparseMatrix_i B, 
  ElDistSparseMatrix_i C );
EL_EXPORT ElError ElVCatDistSparse_s
( ElConstDistSparseMatrix_s A, ElConstDistSparseMatrix_s B, 
  ElDistSparseMatrix_s C );
EL_EXPORT ElError ElVCatDistSparse_d
( ElConstDistSparseMatrix_d A, ElConstDistSparseMatrix_d B, 
  ElDistSparseMatrix_d C );
EL_EXPORT ElError ElVCatDistSparse_c
( ElConstDistSparseMatrix_c A, ElConstDistSparseMatrix_c B, 
  ElDistSparseMatrix_c C );
EL_EXPORT ElError ElVCatDistSparse_z
( ElConstDistSparseMatrix_z A, ElConstDistSparseMatrix_z B, 
  ElDistSparseMatrix_z C );
EL_EXPORT ElError ElVCatDistMultiVec_i
( ElConstDistMultiVec_i A, ElConstDistMultiVec_i B, 
  ElDistMultiVec_i C );
EL_EXPORT ElError ElVCatDistMultiVec_s
( ElConstDistMultiVec_s A, ElConstDistMultiVec_s B, 
  ElDistMultiVec_s C );
EL_EXPORT ElError ElVCatDistMultiVec_d
( ElConstDistMultiVec_d A, ElConstDistMultiVec_d B, 
  ElDistMultiVec_d C );
EL_EXPORT ElError ElVCatDistMultiVec_c
( ElConstDistMultiVec_c A, ElConstDistMultiVec_c B, 
  ElDistMultiVec_c C );
EL_EXPORT ElError ElVCatDistMultiVec_z
( ElConstDistMultiVec_z A, ElConstDistMultiVec_z B, 
  ElDistMultiVec_z C );
/* Conjugate
   ========= */
/* A := Conj(A) */
EL_EXPORT ElError ElConjugate_c( ElMatrix_c A );
EL_EXPORT ElError ElConjugate_z( ElMatrix_z A );
EL_EXPORT ElError ElConjugateDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElConjugateDist_z( ElDistMatrix_z A );
/* ConjugateDiagonal
   ================= */
/* TODO */

/* B = A 
   ===== */
EL_EXPORT ElError ElCopy_i( ElConstMatrix_i A, ElMatrix_i B );
EL_EXPORT ElError ElCopy_s( ElConstMatrix_s A, ElMatrix_s B );
EL_EXPORT ElError ElCopy_d( ElConstMatrix_d A, ElMatrix_d B );
EL_EXPORT ElError ElCopy_c( ElConstMatrix_c A, ElMatrix_c B );
EL_EXPORT ElError ElCopy_z( ElConstMatrix_z A, ElMatrix_z B );
EL_EXPORT ElError ElCopyDist_i( ElConstDistMatrix_i A, ElDistMatrix_i B );
EL_EXPORT ElError ElCopyDist_s( ElConstDistMatrix_s A, ElDistMatrix_s B );
EL_EXPORT ElError ElCopyDist_d( ElConstDistMatrix_d A, ElDistMatrix_d B );
EL_EXPORT ElError ElCopyDist_c( ElConstDistMatrix_c A, ElDistMatrix_c B );
EL_EXPORT ElError ElCopyDist_z( ElConstDistMatrix_z A, ElDistMatrix_z B );
EL_EXPORT ElError ElCopyGraph( ElConstGraph A, ElGraph B );
EL_EXPORT ElError ElCopyDistGraph( ElConstDistGraph A, ElDistGraph B );
EL_EXPORT ElError ElCopyGraphFromRoot
( ElConstDistGraph distGraph, ElGraph graph );
EL_EXPORT ElError ElCopyGraphFromNonRoot
( ElConstDistGraph distGraph, int root );
EL_EXPORT ElError ElCopySparse_i( ElConstSparseMatrix_i A, ElSparseMatrix_i B );
EL_EXPORT ElError ElCopySparse_s( ElConstSparseMatrix_s A, ElSparseMatrix_s B );
EL_EXPORT ElError ElCopySparse_d( ElConstSparseMatrix_d A, ElSparseMatrix_d B );
EL_EXPORT ElError ElCopySparse_c( ElConstSparseMatrix_c A, ElSparseMatrix_c B );
EL_EXPORT ElError ElCopySparse_z( ElConstSparseMatrix_z A, ElSparseMatrix_z B );
EL_EXPORT ElError ElCopySparseToDense_i
( ElConstSparseMatrix_i A, ElMatrix_i B );
EL_EXPORT ElError ElCopySparseToDense_s
( ElConstSparseMatrix_s A, ElMatrix_s B );
EL_EXPORT ElError ElCopySparseToDense_d
( ElConstSparseMatrix_d A, ElMatrix_d B );
EL_EXPORT ElError ElCopySparseToDense_c
( ElConstSparseMatrix_c A, ElMatrix_c B );
EL_EXPORT ElError ElCopySparseToDense_z
( ElConstSparseMatrix_z A, ElMatrix_z B );
EL_EXPORT ElError ElCopyDistSparse_i
( ElConstDistSparseMatrix_i A, ElDistSparseMatrix_i B );
EL_EXPORT ElError ElCopyDistSparse_s
( ElConstDistSparseMatrix_s A, ElDistSparseMatrix_s B );
EL_EXPORT ElError ElCopyDistSparse_d
( ElConstDistSparseMatrix_d A, ElDistSparseMatrix_d B );
EL_EXPORT ElError ElCopyDistSparse_c
( ElConstDistSparseMatrix_c A, ElDistSparseMatrix_c B );
EL_EXPORT ElError ElCopyDistSparse_z
( ElConstDistSparseMatrix_z A, ElDistSparseMatrix_z B );
EL_EXPORT ElError ElCopyDistSparseToDense_i
( ElConstDistSparseMatrix_i A, ElDistMatrix_i B );
EL_EXPORT ElError ElCopyDistSparseToDense_s
( ElConstDistSparseMatrix_s A, ElDistMatrix_s B );
EL_EXPORT ElError ElCopyDistSparseToDense_d
( ElConstDistSparseMatrix_d A, ElDistMatrix_d B );
EL_EXPORT ElError ElCopyDistSparseToDense_c
( ElConstDistSparseMatrix_c A, ElDistMatrix_c B );
EL_EXPORT ElError ElCopyDistSparseToDense_z
( ElConstDistSparseMatrix_z A, ElDistMatrix_z B );
EL_EXPORT ElError ElCopySparseMatrixFromRoot_i
( ElConstDistSparseMatrix_i ADist, ElSparseMatrix_i A );
EL_EXPORT ElError ElCopySparseMatrixFromRoot_s
( ElConstDistSparseMatrix_s ADist, ElSparseMatrix_s A );
EL_EXPORT ElError ElCopySparseMatrixFromRoot_d
( ElConstDistSparseMatrix_d ADist, ElSparseMatrix_d A );
EL_EXPORT ElError ElCopySparseMatrixFromRoot_c
( ElConstDistSparseMatrix_c ADist, ElSparseMatrix_c A );
EL_EXPORT ElError ElCopySparseMatrixFromRoot_z
( ElConstDistSparseMatrix_z ADist, ElSparseMatrix_z A );
EL_EXPORT ElError ElCopySparseMatrixFromNonRoot_i
( ElConstDistSparseMatrix_i ADist, int root );
EL_EXPORT ElError ElCopySparseMatrixFromNonRoot_s
( ElConstDistSparseMatrix_s ADist, int root );
EL_EXPORT ElError ElCopySparseMatrixFromNonRoot_d
( ElConstDistSparseMatrix_d ADist, int root );
EL_EXPORT ElError ElCopySparseMatrixFromNonRoot_c
( ElConstDistSparseMatrix_c ADist, int root );
EL_EXPORT ElError ElCopySparseMatrixFromNonRoot_z
( ElConstDistSparseMatrix_z ADist, int root );
EL_EXPORT ElError ElCopyDistMultiVec_i
( ElConstDistMultiVec_i A, ElDistMultiVec_i B );
EL_EXPORT ElError ElCopyDistMultiVec_s
( ElConstDistMultiVec_s A, ElDistMultiVec_s B );
EL_EXPORT ElError ElCopyDistMultiVec_d
( ElConstDistMultiVec_d A, ElDistMultiVec_d B );
EL_EXPORT ElError ElCopyDistMultiVec_c
( ElConstDistMultiVec_c A, ElDistMultiVec_c B );
EL_EXPORT ElError ElCopyDistMultiVec_z
( ElConstDistMultiVec_z A, ElDistMultiVec_z B );
EL_EXPORT ElError ElCopyMultiVecFromRoot_i
( ElConstDistMultiVec_i XDist, ElMatrix_i X );
EL_EXPORT ElError ElCopyMultiVecFromRoot_s
( ElConstDistMultiVec_s XDist, ElMatrix_s X );
EL_EXPORT ElError ElCopyMultiVecFromRoot_d
( ElConstDistMultiVec_d XDist, ElMatrix_d X );
EL_EXPORT ElError ElCopyMultiVecFromRoot_c
( ElConstDistMultiVec_c XDist, ElMatrix_c X );
EL_EXPORT ElError ElCopyMultiVecFromRoot_z
( ElConstDistMultiVec_z XDist, ElMatrix_z X );
EL_EXPORT ElError ElCopyMultiVecFromNonRoot_i
( ElConstDistMultiVec_i XDist, int root );
EL_EXPORT ElError ElCopyMultiVecFromNonRoot_s
( ElConstDistMultiVec_s XDist, int root );
EL_EXPORT ElError ElCopyMultiVecFromNonRoot_d
( ElConstDistMultiVec_d XDist, int root );
EL_EXPORT ElError ElCopyMultiVecFromNonRoot_c
( ElConstDistMultiVec_c XDist, int root );
EL_EXPORT ElError ElCopyMultiVecFromNonRoot_z
( ElConstDistMultiVec_z XDist, int root );
/* DiagonalScale 
   ============= */
EL_EXPORT ElError ElDiagonalScale_i
( ElLeftOrRight side, 
  ElConstMatrix_i d, ElMatrix_i X );
EL_EXPORT ElError ElDiagonalScale_s
( ElLeftOrRight side,
  ElConstMatrix_s d, ElMatrix_s X );
EL_EXPORT ElError ElDiagonalScale_d
( ElLeftOrRight side, 
  ElConstMatrix_d d, ElMatrix_d X );
EL_EXPORT ElError ElDiagonalScale_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_c d, ElMatrix_c X );
EL_EXPORT ElError ElDiagonalScale_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_z d, ElMatrix_z X );
EL_EXPORT ElError ElDiagonalScaleDist_i
( ElLeftOrRight side, 
  ElConstDistMatrix_i d, ElDistMatrix_i X );
EL_EXPORT ElError ElDiagonalScaleDist_s
( ElLeftOrRight side, 
  ElConstDistMatrix_s d, ElDistMatrix_s X );
EL_EXPORT ElError ElDiagonalScaleDist_d
( ElLeftOrRight side,
  ElConstDistMatrix_d d, ElDistMatrix_d X );
EL_EXPORT ElError ElDiagonalScaleDist_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_c d, ElDistMatrix_c X );
EL_EXPORT ElError ElDiagonalScaleDist_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_z d, ElDistMatrix_z X );
EL_EXPORT ElError ElDiagonalScaleSparse_i
( ElLeftOrRight side, 
  ElConstMatrix_i d, ElSparseMatrix_i X );
EL_EXPORT ElError ElDiagonalScaleSparse_s
( ElLeftOrRight side, 
  ElConstMatrix_s d, ElSparseMatrix_s X );
EL_EXPORT ElError ElDiagonalScaleSparse_d
( ElLeftOrRight side,
  ElConstMatrix_d d, ElSparseMatrix_d X );
EL_EXPORT ElError ElDiagonalScaleSparse_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_c d, ElSparseMatrix_c X );
EL_EXPORT ElError ElDiagonalScaleSparse_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_z d, ElSparseMatrix_z X );
EL_EXPORT ElError ElDiagonalScaleDistSparse_i
( ElLeftOrRight side, 
  ElConstDistMultiVec_i d, ElDistSparseMatrix_i X );
EL_EXPORT ElError ElDiagonalScaleDistSparse_s
( ElLeftOrRight side, 
  ElConstDistMultiVec_s d, ElDistSparseMatrix_s X );
EL_EXPORT ElError ElDiagonalScaleDistSparse_d
( ElLeftOrRight side,
  ElConstDistMultiVec_d d, ElDistSparseMatrix_d X );
EL_EXPORT ElError ElDiagonalScaleDistSparse_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMultiVec_c d, ElDistSparseMatrix_c X );
EL_EXPORT ElError ElDiagonalScaleDistSparse_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMultiVec_z d, ElDistSparseMatrix_z X );