python/blas_like/level1.py


def VCat(A,B):
  if type(A) is not type(B):
    raise Exception('Types of A and B must match')
  if A.tag != B.tag:
    raise Exception('Datatype of A and B must match')
  if type(A) is Matrix:
    C = Matrix(A.tag)
    args = [A.obj,B.obj,C.obj]
    if   A.tag == iTag: lib.ElVCat_i(*args)
    elif A.tag == sTag: lib.ElVCat_s(*args)
    elif A.tag == dTag: lib.ElVCat_d(*args)
    elif A.tag == cTag: lib.ElVCat_c(*args)
    elif A.tag == zTag: lib.ElVCat_z(*args)
    else: DataExcept()
    return C
  elif type(A) is DistMatrix:
    C = DistMatrix(A.tag,MC,MR,A.Grid())
    args = [A.obj,B.obj,C.obj]
    if   A.tag == iTag: lib.ElVCatDist_i(*args)
    elif A.tag == sTag: lib.ElVCatDist_s(*args)
    elif A.tag == dTag: lib.ElVCatDist_d(*args)
    elif A.tag == cTag: lib.ElVCatDist_c(*args)
    elif A.tag == zTag: lib.ElVCatDist_z(*args)
    else: DataExcept()
    return C
  elif type(A) is SparseMatrix: 
    C = SparseMatrix(A.tag)
    args = [A.obj,B.obj,C.obj]
    if   A.tag == iTag: lib.ElVCatSparse_i(*args)
    elif A.tag == sTag: lib.ElVCatSparse_s(*args)
    elif A.tag == dTag: lib.ElVCatSparse_d(*args)
    elif A.tag == cTag: lib.ElVCatSparse_c(*args)
    elif A.tag == zTag: lib.ElVCatSparse_z(*args)
    else: DataExcept()
    return C
  elif type(A) is DistSparseMatrix:
    C = DistSparseMatrix(A.tag,A.Grid())
    args = [A.obj,B.obj,C.obj]
    if   A.tag == iTag: lib.ElVCatDistSparse_i(*args)
    elif A.tag == sTag: lib.ElVCatDistSparse_s(*args)
    elif A.tag == dTag: lib.ElVCatDistSparse_d(*args)
    elif A.tag == cTag: lib.ElVCatDistSparse_c(*args)
    elif A.tag == zTag: lib.ElVCatDistSparse_z(*args)
    else: DataExcept()
    return C
  elif type(A) is DistMultiVec:
    C = DistMultiVec(A.tag,A.Grid())
    args = [A.obj,B.obj,C.obj]
    if   A.tag == iTag: lib.ElVCatDistMultiVec_i(*args)
    elif A.tag == sTag: lib.ElVCatDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElVCatDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElVCatDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElVCatDistMultiVec_z(*args)
    else: DataExcept()
    return C
  else: TypeExcept()

# Conjugate
# ---------
lib.ElConjugate_c.argtypes = \
lib.ElConjugate_z.argtypes = \
lib.ElConjugateDist_c.argtypes = \
lib.ElConjugateDist_z.argtypes = \
  [c_void_p]

def Conjugate(A):
  args = [A.obj]
  if type(A) is Matrix:
    if   A.tag == cTag: lib.ElConjugate_c(*args)
    elif A.tag == zTag: lib.ElConjugate_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == cTag: lib.ElConjugateDist_c(*args)
    elif A.tag == zTag: lib.ElConjugateDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Copy
# ----
lib.ElCopy_s.argtypes = \
lib.ElCopy_d.argtypes = \
lib.ElCopy_c.argtypes = \
lib.ElCopy_z.argtypes = \
lib.ElCopyDist_s.argtypes = \
lib.ElCopyDist_d.argtypes = \
lib.ElCopyDist_c.argtypes = \
lib.ElCopyDist_z.argtypes = \
lib.ElCopyGraph.argtypes = \
lib.ElCopyDistGraph.argtypes = \
lib.ElCopySparse_i.argtypes = \
lib.ElCopySparse_s.argtypes = \
lib.ElCopySparse_d.argtypes = \
lib.ElCopySparse_c.argtypes = \
lib.ElCopySparse_z.argtypes = \
lib.ElCopySparseToDense_i.argtypes = \
lib.ElCopySparseToDense_s.argtypes = \
lib.ElCopySparseToDense_d.argtypes = \
lib.ElCopySparseToDense_c.argtypes = \
lib.ElCopySparseToDense_z.argtypes = \
lib.ElCopyDistSparse_i.argtypes = \
lib.ElCopyDistSparse_s.argtypes = \
lib.ElCopyDistSparse_d.argtypes = \
lib.ElCopyDistSparse_c.argtypes = \
lib.ElCopyDistSparse_z.argtypes = \
lib.ElCopyDistSparseToDense_i.argtypes = \
lib.ElCopyDistSparseToDense_s.argtypes = \
lib.ElCopyDistSparseToDense_d.argtypes = \
lib.ElCopyDistSparseToDense_c.argtypes = \
lib.ElCopyDistSparseToDense_z.argtypes = \
lib.ElCopyDistMultiVec_i.argtypes = \
lib.ElCopyDistMultiVec_s.argtypes = \
lib.ElCopyDistMultiVec_d.argtypes = \
lib.ElCopyDistMultiVec_c.argtypes = \
lib.ElCopyDistMultiVec_z.argtypes = \
  [c_void_p,c_void_p]

def Copy(A,B):
  if A.tag != B.tag:
    raise Exception('Copying between datatypes is not yet supported in Python')
  args = [A.obj,B.obj]
  if type(A) is Matrix:
    if type(B) is not Matrix:
      raise Exception('Expected B to be a Matrix')
    if   B.tag == iTag: lib.ElCopy_i(*args)
    elif B.tag == sTag: lib.ElCopy_s(*args)
    elif B.tag == dTag: lib.ElCopy_d(*args)
    elif B.tag == cTag: lib.ElCopy_c(*args)
    elif B.tag == zTag: lib.ElCopy_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if type(B) is not DistMatrix:
      raise Exception('Expected B to be a DistMatrix')
    if   B.tag == iTag: lib.ElCopyDist_i(*args)
    elif B.tag == sTag: lib.ElCopyDist_s(*args)
    elif B.tag == dTag: lib.ElCopyDist_d(*args)
    elif B.tag == cTag: lib.ElCopyDist_c(*args)
    elif B.tag == zTag: lib.ElCopyDist_z(*args)
    else: DataExcept()
  elif type(A) is Graph:
    if type(B) is not Graph:
      raise Exception('Expected B to be a Graph')
    lib.ElCopyGraph(*args)
  elif type(A) is DistGraph:
    if type(B) is not DistGraph:
      raise Exception('Expected B to be a DistGraph')
    lib.ElCopyDistGraph(*args)
  elif type(A) is SparseMatrix:
    if type(B) is SparseMatrix:
      if   A.tag == iTag: lib.ElCopySparse_i(*args)
      elif A.tag == sTag: lib.ElCopySparse_s(*args)
      elif A.tag == dTag: lib.ElCopySparse_d(*args)
      elif A.tag == cTag: lib.ElCopySparse_c(*args)
      elif A.tag == zTag: lib.ElCopySparse_z(*args)
      else: DataExcept()
    elif type(B) is Matrix:
      if   A.tag == iTag: lib.ElCopySparseToDense_i(*args)
      elif A.tag == sTag: lib.ElCopySparseToDense_s(*args)
      elif A.tag == dTag: lib.ElCopySparseToDense_d(*args)
      elif A.tag == cTag: lib.ElCopySparseToDense_c(*args)
      elif A.tag == zTag: lib.ElCopySparseToDense_z(*args)
      else: DataExcept()
    else:
      raise Exception('Expected B to be a (Sparse)Matrix')
  elif type(A) is DistSparseMatrix:
    if type(B) is DistSparseMatrix:
      if   A.tag == iTag: lib.ElCopyDistSparse_i(*args)
      elif A.tag == sTag: lib.ElCopyDistSparse_s(*args)
      elif A.tag == dTag: lib.ElCopyDistSparse_d(*args)
      elif A.tag == cTag: lib.ElCopyDistSparse_c(*args)
      elif A.tag == zTag: lib.ElCopyDistSparse_z(*args)
      else: DataExcept()
    elif type(B) is DistMatrix:
      if   A.tag == iTag: lib.ElCopyDistSparseToDense_i(*args)
      elif A.tag == sTag: lib.ElCopyDistSparseToDense_s(*args)
      elif A.tag == dTag: lib.ElCopyDistSparseToDense_d(*args)
      elif A.tag == cTag: lib.ElCopyDistSparseToDense_c(*args)
      elif A.tag == zTag: lib.ElCopyDistSparseToDense_z(*args)
      else: DataExcept()
    else:
      raise Exception('Expected B to be a Dist(Sparse)Matrix')
  elif type(A) is DistMultiVec:
    if type(B) is not DistMultiVec:
      raise Exception('Expected B to be a DistMultiVec')
    if   A.tag == iTag: lib.ElCopyDistMultiVec_i(*args)
    elif A.tag == sTag: lib.ElCopyDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElCopyDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElCopyDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElCopyDistMultiVec_z(*args)
    else: DataExcept()
  else: TypeExcept()

lib.ElCopyGraphFromRoot.argtypes = \
lib.ElCopyMultiVecFromRoot_i.argtypes = \
lib.ElCopyMultiVecFromRoot_s.argtypes = \
lib.ElCopyMultiVecFromRoot_d.argtypes = \
lib.ElCopyMultiVecFromRoot_c.argtypes = \
lib.ElCopyMultiVecFromRoot_z.argtypes = \
  [c_void_p,c_void_p]

def CopyFromRoot(ADist,ASeq):
  args = [ADist.obj,ASeq.obj]
  if type(ADist) is DistGraph:
    if type(ASeq) is not Graph:
      raise Exception("Expected the result to be a Graph")
    lib.ElCopyGraphFromRoot(*args)
  elif type(ADist) is DistSparseMatrix:
    if type(ASeq) is not SparseMatrix:
      raise Exception("Expected the result to be a SparseMatrix")
    if ASeq.tag != ADist.tag:
      raise Exception("Expected the result to be of the same type")
    if   ADist.tag == iTag: lib.ElCopySparseMatrixFromRoot_i(*args)
    elif ADist.tag == sTag: lib.ElCopySparseMatrixFromRoot_s(*args)
    elif ADist.tag == dTag: lib.ElCopySparseMatrixFromRoot_d(*args)
    elif ADist.tag == cTag: lib.ElCopySparseMatrixFromRoot_c(*args)
    elif ADist.tag == zTag: lib.ElCopySparseMatrixFromRoot_z(*args)
    else: DataExcept()
  elif type(ADist) is DistMultiVec:
    if type(ASeq) is not Matrix:
      raise Exception("Expected the result to be a Matrix")
    if ASeq.tag != ADist.tag:
      raise Exception("Expected the result to be of the same type")
    if   ADist.tag == iTag: lib.ElCopyMultiVecFromRoot_i(*args)
    elif ADist.tag == sTag: lib.ElCopyMultiVecFromRoot_s(*args)
    elif ADist.tag == dTag: lib.ElCopyMultiVecFromRoot_d(*args)
    elif ADist.tag == cTag: lib.ElCopyMultiVecFromRoot_c(*args)
    elif ADist.tag == zTag: lib.ElCopyMultiVecFromRoot_z(*args)
    else: DataExcept()
  else: TypeExcept()

lib.ElCopyMultiVecFromNonRoot_i.argtypes = \
lib.ElCopyMultiVecFromNonRoot_s.argtypes = \
lib.ElCopyMultiVecFromNonRoot_d.argtypes = \
lib.ElCopyMultiVecFromNonRoot_c.argtypes = \
lib.ElCopyMultiVecFromNonRoot_z.argtypes = \
lib.ElCopyGraphFromNonRoot.argtypes = \
  [c_void_p,c_int]

def CopyFromNonRoot(ADist,root=0):
  args = [ADist.obj,root]
  if type(ADist) is DistGraph:
    lib.ElCopyGraphFromNonRoot(*args)
  elif type(ADist) is DistSparseMatrix:
    if   ADist.tag == iTag: lib.ElCopySparseMatrixFromNonRoot_i(*args)
    elif ADist.tag == sTag: lib.ElCopySparseMatrixFromNonRoot_s(*args)
    elif ADist.tag == dTag: lib.ElCopySparseMatrixFromNonRoot_d(*args)
    elif ADist.tag == cTag: lib.ElCopySparseMatrixFromNonRoot_c(*args)
    elif ADist.tag == zTag: lib.ElCopySparseMatrixFromNonRoot_z(*args)
    else: DataExcept()
  elif type(ADist) is DistMultiVec:
    if   ADist.tag == iTag: lib.ElCopyMultiVecFromNonRoot_i(*args)
    elif ADist.tag == sTag: lib.ElCopyMultiVecFromNonRoot_s(*args)
    elif ADist.tag == dTag: lib.ElCopyMultiVecFromNonRoot_d(*args)
    elif ADist.tag == cTag: lib.ElCopyMultiVecFromNonRoot_c(*args)
    elif ADist.tag == zTag: lib.ElCopyMultiVecFromNonRoot_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Diagonal scale
# --------------
lib.ElDiagonalScale_i.argtypes = \
lib.ElDiagonalScale_s.argtypes = \
lib.ElDiagonalScale_d.argtypes = \
lib.ElDiagonalScaleDist_i.argtypes = \
lib.ElDiagonalScaleDist_s.argtypes = \
lib.ElDiagonalScaleDist_d.argtypes = \
lib.ElDiagonalScaleSparse_i.argtypes = \
lib.ElDiagonalScaleSparse_s.argtypes = \
lib.ElDiagonalScaleSparse_d.argtypes = \
lib.ElDiagonalScaleDistSparse_i.argtypes = \
lib.ElDiagonalScaleDistSparse_s.argtypes = \
lib.ElDiagonalScaleDistSparse_d.argtypes = \
lib.ElDiagonalScaleDistMultiVec_i.argtypes = \
lib.ElDiagonalScaleDistMultiVec_s.argtypes = \
lib.ElDiagonalScaleDistMultiVec_d.argtypes = \
lib.ElDiagonalScaleDistMultiVec_d.argtypes = \
  [c_uint,c_void_p,c_void_p]

lib.ElDiagonalScale_c.argtypes = \
lib.ElDiagonalScale_z.argtypes = \
lib.ElDiagonalScaleDist_c.argtypes = \
lib.ElDiagonalScaleDist_z.argtypes = \
lib.ElDiagonalScaleSparse_c.argtypes = \
lib.ElDiagonalScaleSparse_z.argtypes = \
lib.ElDiagonalScaleDistSparse_c.argtypes = \
lib.ElDiagonalScaleDistSparse_z.argtypes = \
lib.ElDiagonalScaleDistMultiVec_c.argtypes = \
lib.ElDiagonalScaleDistMultiVec_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p]
